Fixed spacing of table cells to be vertically aligned with middle. Fixed non blocking JS error with deleting goals. Improved Capybara to test deletes. Deleting Goal now returns flash.

--- a/app/assets/stylesheets/app-overrides.css.scss
+++ b/app/assets/stylesheets/app-overrides.css.scss
@@ -76,3 +76,11 @@ td.date-cell .field_with_errors {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
 }
+
+table.table td {
+  vertical-align: middle;
+}
+
+.goal-delete-button {
+  display: none;
+}
